# thesis-genetic-swarm

./: .gitignore  CMakeLists.txt  clear-logs.sh  config_template.json  constants.h  default.json  test.argos
analysis-visualization/: .gitignore  complexity.ipynb  complexity.py  requirements.txt  utils.py  visualization-tesi.ipynb  visualization.ipynb
analysis-visualization/collected-data/complexity/task1/: task1_28-01_22-30.tgz
analysis-visualization/collected-data/complexity/task2/: task2_11-15_29-01.tgz
analysis-visualization/collected-data/genetic/task1/: result_task1_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_08-48_20-01_best_all.csv  result_task1_nodes50_k3_bias0.21_prox0_p80_g100_pM0.03_pC0_el5_trials3_21-39_19-01_best_all.csv  result_task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0.1_el5_trials3_11-51_20-01_best_all.csv  result_task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_10-41_20-01_best_all.csv  result_task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.03_pC0_el5_trials3_14-09_20-01_best_all.csv  task1_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_08-48_20-01.csv  task1_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_08-48_20-01_best_all.csv  task1_nodes50_k3_bias0.21_prox0_p80_g100_pM0.03_pC0_el5_trials3_21-39_19-01.csv  task1_nodes50_k3_bias0.21_prox0_p80_g100_pM0.03_pC0_el5_trials3_21-39_19-01_best_all.csv  task1_nodes50_k3_bias0.21_prox1.5_p100_g100_pM0.01_pC0_el5_trials3_15-20_20-01_best_all.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0.1_el5_trials3_11-51_20-01.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0.1_el5_trials3_11-51_20-01_best_all.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_10-41_20-01.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_10-41_20-01_best_all.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_17-18_20-01.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_22-30_28-01.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.03_pC0_el5_trials3_14-09_20-01.csv  task1_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.03_pC0_el5_trials3_14-09_20-01_best_all.csv
analysis-visualization/collected-data/genetic/task2/: result_task2_nodes50_k3_bias0.21_prox0_p100_g80_pM0.01_pC0_el5_trials3_15-30_22-01.csv  result_task2_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_17-18_22-01.csv  result_task2_nodes50_k3_bias0.21_prox1.5_p100_g80_pM0.01_pC0.1_el5_trials3_13-48_22-01_best_all.csv  result_task2_nodes50_k3_bias0.21_prox1.5_p100_g80_pM0.01_pC0_el5_trials3_11-16_22-01_best_all.csv  result_task2_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_22-42_22-01.csv  task2_nodes50_k3_bias0.21_prox0_p100_g80_pM0.01_pC0_el5_trials3_15-30_22-01.csv  task2_nodes50_k3_bias0.21_prox0_p100_g80_pM0.01_pC0_el5_trials3_15-30_22-01_best_all.csv  task2_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_17-18_22-01.csv  task2_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_17-18_22-01_best_all.csv  task2_nodes50_k3_bias0.21_prox1.5_p100_g80_pM0.01_pC0.1_el5_trials3_13-48_22-01.csv  task2_nodes50_k3_bias0.21_prox1.5_p100_g80_pM0.01_pC0.1_el5_trials3_13-48_22-01_best_all.csv  task2_nodes50_k3_bias0.21_prox1.5_p100_g80_pM0.01_pC0_el5_trials3_11-16_22-01.csv  task2_nodes50_k3_bias0.21_prox1.5_p100_g80_pM0.01_pC0_el5_trials3_11-16_22-01_best_all.csv  task2_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_11-15_29-01.csv  task2_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_11-15_29-01_best_all.csv  task2_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_22-42_22-01.csv  task2_nodes50_k3_bias0.21_prox1.5_p80_g100_pM0.01_pC0_el5_trials3_22-42_22-01_best_all.csv
analysis-visualization/collected-data/genetic/task3/: result_task3_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0.1_el5_trials3_14-01_23-01.csv  result_task3_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0_el5_trials3_12-30_23-01.csv  task3_nodes50_k3_bias0.21_prox0_p80_g100_pM0.01_pC0.1_el5_trials3_14-01_23-01.csv  (+9 more)
cmake/: FindBoost.cmake  FindFPLUS.cmake  FindGALIB.cmake
complexity/: CMakeLists.txt  Complexity.h  main.cpp
controller/: CMakeLists.txt
controller/rbn/: BNController.cpp  BNController.h  CMakeLists.txt  Footbot.cpp  Footbot.h
core/: BooleanNetwork.cpp  BooleanNetwork.h  BooleanNetworkLoader.h  BooleanNetworkSerializer.h  CMakeLists.txt  Logger.h  SolutionLoader.h
core/configuration/: ArgosExperiment.cpp  ArgosExperiment.h  ConfigurationJson.cpp  ConfigurationJson.h  ExperimentConfiguration.h  config.h
experiments/: check-arena.argos  config.json  task1-test.argos  task1.json  task2-test.argos  task2-viz.argos  task2.json  task3.argos  task3.json
experiments/task1/: task1-test.argos  task1-viz.argos  task1.argos
experiments/task2/: config.json  task2-test.argos  task2-viz.argos  task2.argos
experiments/task3/: task3-multi.argos  task3-test.argos  task3-viz.argos  task3.argos
experiments/task4/: config.json  task4-test.argos  task4-viz.argos  task4.argos
galib-wrapper/: CMakeLists.txt  GeneticBuilder.h  GeneticIterator.h  test.cpp
genetic/: CMakeLists.txt  scala.cpp
genetic/core/: BNGenome.cpp  BNGenome.h  CMakeLists.txt  GeneticEvaluator.h  GenomeEvalData.cpp  GenomeEvalData.h  PerformanceLogger.cpp  PerformanceLogger.h
genetic/parallel/: BNGenomeSharedMemory.h  CMakeLists.txt  MasterSlave.cpp  MasterSlave.h  ParallelEvaluator.cpp  ParallelEvalutator.h  main.cpp
genetic/parallel/mpi/: MPI.cpp  MPIEvaluator.cpp  MPIEvaluator.h
genetic/sequential/: CMakeLists.txt  main.cpp
genetic/test/: main.cpp  testing.cpp  testing.h
genetic/visualize/: visualize.cpp
loop_function/: CMakeLists.txt
loop_function/evolution/: BaseLoop.cpp  BaseLoop.h  CMakeLists.txt  Circle.h  EvaluationFunctions.h  LoopTask1.cpp  LoopTask1.h  LoopTask2.cpp  LoopTask2.h  LoopTask3.cpp  LoopTask3.h  LoopTask4.cpp  LoopTask4.h  Rect.h  evolution_loop.cpp  evolution_loop.h
utility/: CMakeLists.txt  JsonPrettify.h  Matrix.h  Random.cpp  Random.h  Utility.cpp  Utility.h  rapidcsv.h
(+13 files in other folders)
